--- a/userdao/build.gradle
+++ b/userdao/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group 'org.example'
@@ -14,13 +15,19 @@ ext {
 }
 //작은따움표는 매개변수로 쓸 수 없음. 스프링은 따라서 큰 따움표로 쓸 것.
 dependencies {
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
     implementation "org.springframework:spring-core:${springVersion}"
     implementation "org.springframework:spring-context:${springVersion}"
     implementation "org.springframework:spring-jdbc:${springVersion}"
+    implementation 'org.projectlombok:lombok:1.18.22'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
+    implementation "org.springframework:spring-webmvc:${springVersion}"
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.1'
 
 }
 
